Samples/out.txt
../idxDatasetReader.cpp: In member function ‘void IdxDatasetReader::getDataset()’:
../idxDatasetReader.cpp:137:8: error: invalid conversion from ‘char**’ to ‘unsigned char**’ [-fpermissive]
   data = new char*[nDatasets];
        ^
../idxDatasetReader.cpp:142:43: error: ‘totalDatasetSize’ was not declared in this scope
    for (unsigned int byteId = 0; byteId < totalDatasetSize; byteId++)
                                           ^
../idxDatasetReader.cpp:143:37: error: no matching function for call to ‘std::basic_ifstream<char>::get(unsigned char&)’
     file.get(data[datasetId][byteId]); 
                                     ^
../idxDatasetReader.cpp:143:37: note: candidates are:
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from ../idxDatasetReader.cpp:1:
/usr/include/c++/4.8/istream:302:7: note: std::basic_istream<_CharT, _Traits>::int_type std::basic_istream<_CharT, _Traits>::get() [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::int_type = int]
       get();
       ^
/usr/include/c++/4.8/istream:302:7: note:   candidate expects 0 arguments, 1 provided
/usr/include/c++/4.8/istream:316:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type&) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char]
       get(char_type& __c);
       ^
/usr/include/c++/4.8/istream:316:7: note:   no known conversion for argument 1 from ‘unsigned char’ to ‘std::basic_istream<char>::char_type& {aka char&}’
/usr/include/c++/4.8/istream:343:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       get(char_type* __s, streamsize __n, char_type __delim);
       ^
/usr/include/c++/4.8/istream:343:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/4.8/istream:354:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       get(char_type* __s, streamsize __n)
       ^
/usr/include/c++/4.8/istream:354:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/istream:377:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::__streambuf_type&, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__streambuf_type = std::basic_streambuf<char>; std::basic_istream<_CharT, _Traits>::char_type = char]
       get(__streambuf_type& __sb, char_type __delim);
       ^
/usr/include/c++/4.8/istream:377:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/istream:387:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::__streambuf_type&) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::__streambuf_type = std::basic_streambuf<char>]
       get(__streambuf_type& __sb)
       ^
/usr/include/c++/4.8/istream:387:7: note:   no known conversion for argument 1 from ‘unsigned char’ to ‘std::basic_istream<char>::__streambuf_type& {aka std::basic_streambuf<char>&}’
../idxDatasetReader.cpp:147:31: error: ‘totalDatasetSize’ was not declared in this scope
   data = new short[nDatasets][totalDatasetSize]; 
                               ^
../idxDatasetReader.cpp:151:38: error: no matching function for call to ‘std::basic_ifstream<char>::get(unsigned char&)’
      file.get(data[datasetId][byteId]); 
                                      ^
../idxDatasetReader.cpp:151:38: note: candidates are:
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from ../idxDatasetReader.cpp:1:
/usr/include/c++/4.8/istream:302:7: note: std::basic_istream<_CharT, _Traits>::int_type std::basic_istream<_CharT, _Traits>::get() [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::int_type = int]
       get();
       ^
/usr/include/c++/4.8/istream:302:7: note:   candidate expects 0 arguments, 1 provided
/usr/include/c++/4.8/istream:316:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type&) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char]
       get(char_type& __c);
       ^
/usr/include/c++/4.8/istream:316:7: note:   no known conversion for argument 1 from ‘unsigned char’ to ‘std::basic_istream<char>::char_type& {aka char&}’
/usr/include/c++/4.8/istream:343:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       get(char_type* __s, streamsize __n, char_type __delim);
       ^
/usr/include/c++/4.8/istream:343:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/4.8/istream:354:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       get(char_type* __s, streamsize __n)
       ^
/usr/include/c++/4.8/istream:354:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/istream:377:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::__streambuf_type&, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__streambuf_type = std::basic_streambuf<char>; std::basic_istream<_CharT, _Traits>::char_type = char]
       get(__streambuf_type& __sb, char_type __delim);
       ^
/usr/include/c++/4.8/istream:377:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/istream:387:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::__streambuf_type&) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::__streambuf_type = std::basic_streambuf<char>]
       get(__streambuf_type& __sb)
       ^
/usr/include/c++/4.8/istream:387:7: note:   no known conversion for argument 1 from ‘unsigned char’ to ‘std::basic_istream<char>::__streambuf_type& {aka std::basic_streambuf<char>&}’
../idxDatasetReader.cpp:161:38: error: no matching function for call to ‘std::basic_ifstream<char>::get(unsigned char&)’
      file.get(data[datasetId][byteId]); 
                                      ^
../idxDatasetReader.cpp:161:38: note: candidates are:
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from ../idxDatasetReader.cpp:1:
/usr/include/c++/4.8/istream:302:7: note: std::basic_istream<_CharT, _Traits>::int_type std::basic_istream<_CharT, _Traits>::get() [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::int_type = int]
       get();
       ^
/usr/include/c++/4.8/istream:302:7: note:   candidate expects 0 arguments, 1 provided
/usr/include/c++/4.8/istream:316:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type&) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char]
       get(char_type& __c);
       ^
/usr/include/c++/4.8/istream:316:7: note:   no known conversion for argument 1 from ‘unsigned char’ to ‘std::basic_istream<char>::char_type& {aka char&}’
/usr/include/c++/4.8/istream:343:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       get(char_type* __s, streamsize __n, char_type __delim);
       ^
/usr/include/c++/4.8/istream:343:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/4.8/istream:354:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       get(char_type* __s, streamsize __n)
       ^
/usr/include/c++/4.8/istream:354:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/istream:377:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::__streambuf_type&, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__streambuf_type = std::basic_streambuf<char>; std::basic_istream<_CharT, _Traits>::char_type = char]
       get(__streambuf_type& __sb, char_type __delim);
       ^
/usr/include/c++/4.8/istream:377:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/istream:387:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::__streambuf_type&) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::__streambuf_type = std::basic_streambuf<char>]
       get(__streambuf_type& __sb)
       ^
/usr/include/c++/4.8/istream:387:7: note:   no known conversion for argument 1 from ‘unsigned char’ to ‘std::basic_istream<char>::__streambuf_type& {aka std::basic_streambuf<char>&}’
../idxDatasetReader.cpp:171:38: error: no matching function for call to ‘std::basic_ifstream<char>::get(unsigned char&)’
      file.get(data[datasetId][byteId]); 
                                      ^
../idxDatasetReader.cpp:171:38: note: candidates are:
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from ../idxDatasetReader.cpp:1:
/usr/include/c++/4.8/istream:302:7: note: std::basic_istream<_CharT, _Traits>::int_type std::basic_istream<_CharT, _Traits>::get() [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::int_type = int]
       get();
       ^
/usr/include/c++/4.8/istream:302:7: note:   candidate expects 0 arguments, 1 provided
/usr/include/c++/4.8/istream:316:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type&) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char]
       get(char_type& __c);
       ^
/usr/include/c++/4.8/istream:316:7: note:   no known conversion for argument 1 from ‘unsigned char’ to ‘std::basic_istream<char>::char_type& {aka char&}’
/usr/include/c++/4.8/istream:343:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       get(char_type* __s, streamsize __n, char_type __delim);
       ^
/usr/include/c++/4.8/istream:343:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/4.8/istream:354:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       get(char_type* __s, streamsize __n)
       ^
/usr/include/c++/4.8/istream:354:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/istream:377:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::__streambuf_type&, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__streambuf_type = std::basic_streambuf<char>; std::basic_istream<_CharT, _Traits>::char_type = char]
       get(__streambuf_type& __sb, char_type __delim);
       ^
/usr/include/c++/4.8/istream:377:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/istream:387:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::__streambuf_type&) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::__streambuf_type = std::basic_streambuf<char>]
       get(__streambuf_type& __sb)
       ^
/usr/include/c++/4.8/istream:387:7: note:   no known conversion for argument 1 from ‘unsigned char’ to ‘std::basic_istream<char>::__streambuf_type& {aka std::basic_streambuf<char>&}’
../idxDatasetReader.cpp:181:37: error: no matching function for call to ‘std::basic_ifstream<char>::get(unsigned char&)’
     file.get(data[datasetId][byteId]); 
                                     ^
../idxDatasetReader.cpp:181:37: note: candidates are:
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from ../idxDatasetReader.cpp:1:
/usr/include/c++/4.8/istream:302:7: note: std::basic_istream<_CharT, _Traits>::int_type std::basic_istream<_CharT, _Traits>::get() [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::int_type = int]
       get();
       ^
/usr/include/c++/4.8/istream:302:7: note:   candidate expects 0 arguments, 1 provided
/usr/include/c++/4.8/istream:316:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type&) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char]
       get(char_type& __c);
       ^
/usr/include/c++/4.8/istream:316:7: note:   no known conversion for argument 1 from ‘unsigned char’ to ‘std::basic_istream<char>::char_type& {aka char&}’
/usr/include/c++/4.8/istream:343:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       get(char_type* __s, streamsize __n, char_type __delim);
       ^
/usr/include/c++/4.8/istream:343:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/4.8/istream:354:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       get(char_type* __s, streamsize __n)
       ^
/usr/include/c++/4.8/istream:354:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/istream:377:7: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::__streambuf_type&, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__streambuf_type = std::basic_streambuf<char>; std::basic_istream<_CharT, _Traits>::char_type = char]
       get(__streambuf_type& __sb, char_type __delim);
       ^
/usr/include/c++/4.8/istream:377:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/istream:387:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::get(std::basic_istream<_CharT, _Traits>::__streambuf_type&) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::__streambuf_type = std::basic_streambuf<char>]
       get(__streambuf_type& __sb)
       ^
/usr/include/c++/4.8/istream:387:7: note:   no known conversion for argument 1 from ‘unsigned char’ to ‘std::basic_istream<char>::__streambuf_type& {aka std::basic_streambuf<char>&}’
../idxDatasetReader.cpp: At global scope:
../idxDatasetReader.cpp:196:6: error: ‘IdxDatsetReader’ has not been declared
 void IdxDatsetReader::saveJPEG(bool datasetType)
      ^
../idxDatasetReader.cpp: In function ‘void saveJPEG(bool)’:
../idxDatasetReader.cpp:199:5: error: ‘nDimensions’ was not declared in this scope
  if(nDimensions == 2)
     ^
../idxDatasetReader.cpp:201:26: error: ‘sizeOfDimension’ was not declared in this scope
   unsigned int nPixels = sizeOfDimension[0] * sizeOfDimension[1];  
                          ^
../idxDatasetReader.cpp:204:44: error: ‘nDatasets’ was not declared in this scope
   for (unsigned int imageId = 0; imageId < nDatasets; imageId++)
                                            ^
../idxDatasetReader.cpp:207:14: error: ‘fileName’ was not declared in this scope
      sprintf(fileName, "MNISTDataset/trainImages/%i.jpg", imageId);
              ^
../idxDatasetReader.cpp:209:14: error: ‘fileName’ was not declared in this scope
      sprintf(fileName, "MNISTDataset/testImages/%i.jpg", imageId);
              ^
../idxDatasetReader.cpp:212:17: error: base operand of ‘->’ has non-pointer type ‘IplImage {aka _IplImage}’
      opencvImage->ImageData[i] = data[imageId][i]; 
                 ^
../idxDatasetReader.cpp:212:34: error: ‘data’ was not declared in this scope
      opencvImage->ImageData[i] = data[imageId][i]; 
                                  ^
../idxDatasetReader.cpp:214:17: error: invalid use of ‘this’ in non-member function
     cvSaveImage(this->fileName, opencvImage);
                 ^
